--- a/index.html
+++ b/index.html
@@ -8,10 +8,8 @@
   </head>
   <body>
     <header>
-      <a href="">
-        <p>WebStudio</p>
-      </a>
       <nav>
+        <a href="./index.html">WebStudio</a>
         <ul>
           <li>
             <a href="">Студія</a>
@@ -31,27 +29,43 @@
     </header>
     <main>
       <section>
-        <h1>Ефективні рішення для вашого бізнесу</h1>
+        <h1>
+          Ефективні рішення для <br />
+          вашого бізнесу
+        </h1>
         <button type="button">Замовити послугу</button>
       </section>
       <section>
-        <h2>Увага до дуталей</h2>
-        <p>
-          Ідейні міркування, і навіть початок повсякденної роботи з формування
-          позиції.
-        </p>
-        <h2>Пунктуальність</h2>
-        <p>
-          Завдання організації, особливо рамки і місце навчання кадрів тягне у
-          себе.
-        </p>
-        <h2>Планування</h2>
-        <p>Так само консультація з широким активом значною мірою зумовлює.</p>
-        <h2>Сучасні технології</h2>
-        <p>
-          Значимість цих проблем настільки очевидна, що реалізація планових
-          завдань.
-        </p>
+        <h2>Переваги</h2>
+        <ul>
+          <li>
+            <h3>Увага до дуталей</h3>
+            <p>
+              Ідейні міркування, і навіть початок повсякденної роботи з
+              формування позиції.
+            </p>
+          </li>
+          <li>
+            <h3>Пунктуальність</h3>
+            <p>
+              Завдання організації, особливо рамки і місце навчання кадрів тягне
+              у себе.
+            </p>
+          </li>
+          <li>
+            <h3>Планування</h3>
+            <p>
+              Так само консультація з широким активом значною мірою зумовлює.
+            </p>
+          </li>
+          <li>
+            <h3>Сучасні технології</h3>
+            <p>
+              Значимість цих проблем настільки очевидна, що реалізація планових
+              завдань.
+            </p>
+          </li>
+        </ul>
       </section>
       <section>
         <h2>Чим ми займаємося</h2>
@@ -129,19 +143,23 @@
       </section>
     </main>
     <footer>
-      <a href="">
-        <p>WebStudio</p>
-      </a>
+      <a href="./index.html">WebStudio</a>
       <address>
-        <a
-          href="https://goo.gl/maps/qnxu2ppHanYmHoTc9"
-          target="_blank"
-          rel="noopener noreferrer nofollow"
-          >м. Київ, пр-т Лесі Українки, 26</a
-        >
         <ul>
-          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-          <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+          <li>
+            <a
+              href="https://goo.gl/maps/qnxu2ppHanYmHoTc9"
+              target="_blank"
+              rel="noopener noreferrer nofollow"
+              >м. Київ, пр-т Лесі Українки, 26</a
+            >
+          </li>
+          <li>
+            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+          </li>
+          <li>
+            <a href="tel:+380961111111">+38 096 111 11 11</a>
+          </li>
         </ul>
       </address>
     </footer>
