--- a/index.html
+++ b/index.html
@@ -5,72 +5,89 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>WebStudio</title>
+    <link rel="stylesheet" href="./css/style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
-    <header>
+    <header class="header">
       <nav>
-        <a href="./index.html">WebStudio</a>
-        <ul>
-          <li>
-            <a href="">Студія</a>
+        <a class="logo-blue link" href="./index.html"
+          >Web <span class="logo-black">Studio</span>
+        </a>
+        <ul class="header-list list">
+          <li class="header-item">
+            <a href="" class="header-link link">Студія</a>
           </li>
-          <li>
-            <a href="">Портфоліо</a>
+          <li class="header-item">
+            <a href="./portfolio.html" class="header-link link">Портфоліо</a>
           </li>
-          <li>
-            <a href="">Контакти</a>
+          <li class="header-item">
+            <a href="" class="header-link link">Контакти</a>
           </li>
         </ul>
       </nav>
-      <ul>
-        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-        <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+      <ul class="contacts list">
+        <li class="contacts-item">
+          <a href="mailto:info@devstudio.com" class="contacts-link link"
+            >info@devstudio.com</a
+          >
+        </li>
+        <li class="contacts-item">
+          <a href="tel:+380961111111" class="contacts-link link"
+            >+38 096 111 11 11</a
+          >
+        </li>
       </ul>
     </header>
     <main>
-      <section>
-        <h1>
+      <section class="hero">
+        <h1 class="hero-title">
           Ефективні рішення для <br />
           вашого бізнесу
         </h1>
-        <button type="button">Замовити послугу</button>
+        <button class="hero-button" type="button">Замовити послугу</button>
       </section>
-      <section>
-        <h2>Переваги</h2>
-        <ul>
-          <li>
-            <h3>Увага до дуталей</h3>
-            <p>
+      <section class="adv">
+        <h2 class="visually-hidden">Переваги</h2>
+        <ul class="adv-list list">
+          <li class="adv-item">
+            <h3 class="adv-title">Увага до деталей</h3>
+            <p class="adv-text">
               Ідейні міркування, і навіть початок повсякденної роботи з
               формування позиції.
             </p>
           </li>
-          <li>
-            <h3>Пунктуальність</h3>
-            <p>
+          <li class="adv-item">
+            <h3 class="adv-title">Пунктуальність</h3>
+            <p class="adv-text">
               Завдання організації, особливо рамки і місце навчання кадрів тягне
               у себе.
             </p>
           </li>
-          <li>
-            <h3>Планування</h3>
-            <p>
+          <li class="adv-item">
+            <h3 class="adv-title">Планування</h3>
+            <p class="adv-text">
               Так само консультація з широким активом значною мірою зумовлює.
             </p>
           </li>
-          <li>
-            <h3>Сучасні технології</h3>
-            <p>
+          <li class="adv-item">
+            <h3 class="adv-title">Сучасні технології</h3>
+            <p class="adv-text">
               Значимість цих проблем настільки очевидна, що реалізація планових
               завдань.
             </p>
           </li>
         </ul>
       </section>
-      <section>
-        <h2>Чим ми займаємося</h2>
-        <ul>
-          <li>
+      <section class="work">
+        <h2 class="work-title">Чим ми займаємося</h2>
+        <ul class="work-list list">
+          <li class="work-item">
             <img
               src="./img/workplace1.jpg"
               alt="верстка сайту"
@@ -78,7 +95,7 @@
               height="294"
             />
           </li>
-          <li>
+          <li class="work-item">
             <img
               src="./img/workplace2.jpg"
               alt="дизайн додатку"
@@ -86,7 +103,7 @@
               height="294"
             />
           </li>
-          <li>
+          <li class="work-item">
             <img
               src="./img/workplace3.jpg"
               alt="вибір кольору"
@@ -96,28 +113,28 @@
           </li>
         </ul>
       </section>
-      <section>
-        <h2>Наша команда</h2>
-        <ul>
-          <li>
+      <section class="command">
+        <h2 class="command-title">Наша команда</h2>
+        <ul class="command-list list">
+          <li class="command-item">
             <img
               src="./img/team_mmbr1.jpeg"
               alt="працівник вебстудії"
               width="270"
               height="260"
             />
-            <h3>Ігор Дем'яненко</h3>
-            <p lang="en">Product Designer</p>
+            <h3 class="command-name">Ігор Дем'яненко</h3>
+            <p class="command-major" lang="en">Product Designer</p>
           </li>
-          <li>
+          <li class="command-item">
             <img
               src="./img/team_mmbr2.jpeg"
               alt="працівник вебстудії"
               width="270"
               height="260"
             />
-            <h3>Ольга Рєпіна</h3>
-            <p lang="en">Frontend Developer</p>
+            <h3 class="command-name">Ольга Рєпіна</h3>
+            <p class="command-major" lang="en">Frontend Developer</p>
           </li>
           <li>
             <img
@@ -126,39 +143,46 @@
               width="270"
               height="260"
             />
-            <h3>Микола Тарасов</h3>
-            <p lang="en">Marketing</p>
+            <h3 class="command-name">Микола Тарасов</h3>
+            <p class="command-major" lang="en">Marketing</p>
           </li>
-          <li>
+          <li class="command-item">
             <img
               src="./img/team_mmbr4.jpeg"
               alt="працівник вебстудії"
               width="270"
               height="260"
             />
-            <h3>Михайло Єрмаков</h3>
-            <p lang="en">UI Designer</p>
+            <h3 class="command-name">Михайло Єрмаков</h3>
+            <p class="command-major" lang="en">UI Designer</p>
           </li>
         </ul>
       </section>
     </main>
-    <footer>
-      <a href="./index.html">WebStudio</a>
+    <footer class="footer">
+      <a class="logo-blue link" href="./index.html"
+          >Web <span class="logo-white">Studio</span>
+        </a>
       <address>
-        <ul>
-          <li>
+        <ul class="footer-list list">
+          <li class="footer-item">
             <a
+              class="footer-adress link"
               href="https://goo.gl/maps/qnxu2ppHanYmHoTc9"
               target="_blank"
               rel="noopener noreferrer nofollow"
               >м. Київ, пр-т Лесі Українки, 26</a
             >
           </li>
-          <li>
-            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+          <li class="footer-item">
+            <a class="footer-link link" href="mailto:info@devstudio.com"
+              >info@devstudio.com</a
+            >
           </li>
-          <li>
-            <a href="tel:+380961111111">+38 096 111 11 11</a>
+          <li class="footer-item">
+            <a class="footer-link link" href="tel:+380961111111"
+              >+38 096 111 11 11</a
+            >
           </li>
         </ul>
       </address>
