--- a/portfolio.html
+++ b/portfolio.html
@@ -44,111 +44,119 @@
         </li>
       </ul>
     </header>
-    <section>
-      <h2 class="visually-hidden">Портфоліо</h2>
+    <main>
+      <section>
+        <h2 class="visually-hidden">Портфоліо</h2>
 
-      <button class="btn-all btn" type="button">Усі</button>
+        <button class="btn-all btn" type="button">Усі</button>
 
-      <button class="btn-web btn" type="button">Веб-сайти</button>
+        <button class="btn-web btn" type="button">Веб-сайти</button>
 
-      <button class="btn-add btn" type="button">Додатки</button>
+        <button class="btn-add btn" type="button">Додатки</button>
 
-      <button class="btn-design btn" type="button">Дизайн</button>
+        <button class="btn-design btn" type="button">Дизайн</button>
 
-      <button class="btn-marc btn" type="button">Маркетинг</button>
+        <button class="btn-marc btn" type="button">Маркетинг</button>
 
-      <ul class="galery-list list">
-        <li class="galery-item">
-          <img
-            src="./img/portf-1.jpeg"
-            alt="Монітор ноутбука"
-            width="370"
-            height="294"
-          />
-        </li>
-        <h3 class="galery-title">Технокряк</h3>
-        <p class="galery-text">Веб-сайт</p>
-        <li class="galery-item">
-          <img
-            src="./img/portf-2.jpeg"
-            alt="два баскетболісти"
-            width="370"
-            height="294"
-          />
-        </li>
-        <h3 class="galery-title">
-          Постер <span lang="en">New Orlean vs Golden Star</span>
-        </h3>
-        <p class="galery-text">Дизайн</p>
-        <li class="galery-item">
-          <img
-            src="./img/portf-3.jpeg"
-            alt="Логотип ресторану"
-            width="370"
-            height="294"
-          />
-        </li>
-        <h3 class="galery-title">Ресторан <span lang="en">Seafood</span></h3>
-        <p class="galery-text">Додаток</p>
-        <li class="galery-item">
-          <img
-            src="./img/portf-4.jpeg"
-            alt="Навушники"
-            width="370"
-            height="294"
-          />
-        </li>
-        <h3 class="galery-title">Проєкт <span lang="en">Prime</span></h3>
-        <p class="galery-text">Маркетинг</p>
-        <li class="galery-item">
-          <img
-            src="./img/portf-5.jpeg"
-            alt="Дві коробки"
-            width="370"
-            height="294"
-          />
-        </li>
-        <h3 class="galery-title">Проєкт <span lang="en">Boxes</span></h3>
-        <p class="galery-text">Додаток</p>
-        <li class="galery-item">
-          <img
-            src="./img/portf-6.jpeg"
-            alt="Монітор компьютера"
-            width="370"
-            height="294"
-          />
-        </li>
-        <h3 class="galery-title" lang="en">Inspiration has no Borders</h3>
-        <p class="galery-text">Веб-сайт</p>
-        <li class="galery-item">
-          <img
-            src="./img/portf-7.jpeg"
-            alt="Розкритий журнал"
-            width="370"
-            height="294"
-          />
-        </li>
-        <h3 class="galery-title">
-          Видання <span lang="en">Limited Edition</span>
-        </h3>
-        <p class="galery-text">Дизайн</p>
-        <li>
-          <img src="./img/portf-8.jpeg" alt="Ярлик" width="370" height="294" />
-        </li>
-        <h3 class="galery-title">Проєкт <span lang="en">LAB</span></h3>
-        <p class="galery-text">Маркетинг</p>
-        <li class="galery-item">
-          <img
-            src="./img/portf-9.jpeg"
-            alt="Ноутбук"
-            width="370"
-            height="294"
-          />
-        </li>
-        <h3 class="galery-title" lang="en">Growing Business</h3>
-        <p class="galery-text">Додаток</p>
-      </ul>
-    </section>
+        <ul class="galery-list list">
+          <li class="galery-item">
+            <img
+              src="./img/portf-1.jpeg"
+              alt="Монітор ноутбука"
+              width="370"
+              height="294"
+            />
+          </li>
+          <h3 class="galery-title">Технокряк</h3>
+          <p class="galery-text">Веб-сайт</p>
+          <li class="galery-item">
+            <img
+              src="./img/portf-2.jpeg"
+              alt="два баскетболісти"
+              width="370"
+              height="294"
+            />
+          </li>
+          <h3 class="galery-title">
+            Постер <span lang="en">New Orlean vs Golden Star</span>
+          </h3>
+          <p class="galery-text">Дизайн</p>
+          <li class="galery-item">
+            <img
+              src="./img/portf-3.jpeg"
+              alt="Логотип ресторану"
+              width="370"
+              height="294"
+            />
+          </li>
+          <h3 class="galery-title">Ресторан <span lang="en">Seafood</span></h3>
+          <p class="galery-text">Додаток</p>
+          <li class="galery-item">
+            <img
+              src="./img/portf-4.jpeg"
+              alt="Навушники"
+              width="370"
+              height="294"
+            />
+          </li>
+          <h3 class="galery-title">Проєкт <span lang="en">Prime</span></h3>
+          <p class="galery-text">Маркетинг</p>
+          <li class="galery-item">
+            <img
+              src="./img/portf-5.jpeg"
+              alt="Дві коробки"
+              width="370"
+              height="294"
+            />
+          </li>
+          <h3 class="galery-title">Проєкт <span lang="en">Boxes</span></h3>
+          <p class="galery-text">Додаток</p>
+          <li class="galery-item">
+            <img
+              src="./img/portf-6.jpeg"
+              alt="Монітор компьютера"
+              width="370"
+              height="294"
+            />
+          </li>
+          <h3 class="galery-title" lang="en">Inspiration has no Borders</h3>
+          <p class="galery-text">Веб-сайт</p>
+          <li class="galery-item">
+            <img
+              src="./img/portf-7.jpeg"
+              alt="Розкритий журнал"
+              width="370"
+              height="294"
+            />
+          </li>
+          <h3 class="galery-title">
+            Видання <span lang="en">Limited Edition</span>
+          </h3>
+          <p class="galery-text">Дизайн</p>
+          <li>
+            <img
+              src="./img/portf-8.jpeg"
+              alt="Ярлик"
+              width="370"
+              height="294"
+            />
+          </li>
+          <h3 class="galery-title">Проєкт <span lang="en">LAB</span></h3>
+          <p class="galery-text">Маркетинг</p>
+          <li class="galery-item">
+            <img
+              src="./img/portf-9.jpeg"
+              alt="Ноутбук"
+              width="370"
+              height="294"
+            />
+          </li>
+          <h3 class="galery-title" lang="en">Growing Business</h3>
+          <p class="galery-text">Додаток</p>
+        </ul>
+      </section>
+    </main>
+
     <footer class="footer">
       <a class="logo-blue link" href="./index.html"
         >Web <span class="logo-white">Studio</span>
