--- a/portfolio.html
+++ b/portfolio.html
@@ -16,15 +16,15 @@
   <body>
     <header class="header">
       <nav>
-        <a class="logo-blue link" href="./index.html"
-          >Web <span class="logo-black">Studio</span>
+        <a class="logo-blue link logo" href="./index.html"
+          >Web <span class="logo-black logo">Studio</span>
         </a>
         <ul class="header-list list">
           <li class="header-item">
-            <a href="" class="header-link link">Студія</a>
+            <a href="./index.html" class="header-link  link ">Студія</a>
           </li>
           <li class="header-item">
-            <a href="" class="header-link link">Портфоліо</a>
+            <a href="./portfolio.html" class="header-link link current">Портфоліо</a>
           </li>
           <li class="header-item">
             <a href="" class="header-link link">Контакти</a>
@@ -158,8 +158,8 @@
     </main>
 
     <footer class="footer">
-      <a class="logo-blue link" href="./index.html"
-        >Web <span class="logo-white">Studio</span>
+      <a class="logo-blue link logo" href="./index.html"
+        >Web <span class="logo-white logo">Studio</span>
       </a>
       <address>
         <ul class="footer-list list">
