--- a/portfolio.html
+++ b/portfolio.html
@@ -21,10 +21,12 @@
         </a>
         <ul class="header-list list">
           <li class="header-item">
-            <a href="./index.html" class="header-link  link ">Студія</a>
+            <a href="./index.html" class="header-link link">Студія</a>
           </li>
           <li class="header-item">
-            <a href="./portfolio.html" class="header-link link current">Портфоліо</a>
+            <a href="./portfolio.html" class="header-link link current"
+              >Портфоліо</a
+            >
           </li>
           <li class="header-item">
             <a href="" class="header-link link">Контакти</a>
@@ -67,8 +69,12 @@
               height="294"
             />
           </li>
-          <h3 class="galery-title">Технокряк</h3>
-          <p class="galery-text">Веб-сайт</p>
+          <li class="galery-item">
+            <h3 class="galery-title">Технокряк</h3>
+          </li>
+          <li class="galery-item">
+            <p class="galery-text">Веб-сайт</p>
+          </li>
           <li class="galery-item">
             <img
               src="./img/portf-2.jpeg"
@@ -77,10 +83,15 @@
               height="294"
             />
           </li>
-          <h3 class="galery-title">
-            Постер <span lang="en">New Orlean vs Golden Star</span>
-          </h3>
-          <p class="galery-text">Дизайн</p>
+          <li class="galery-item">
+            <h3 class="galery-title">
+              Постер <span lang="en">New Orlean vs Golden Star</span>
+            </h3>
+          </li>
+          <li class="galery-item">
+            <p class="galery-text">Дизайн</p>
+          </li>
+
           <li class="galery-item">
             <img
               src="./img/portf-3.jpeg"
@@ -89,8 +100,15 @@
               height="294"
             />
           </li>
-          <h3 class="galery-title">Ресторан <span lang="en">Seafood</span></h3>
-          <p class="galery-text">Додаток</p>
+          <li class="galery-item">
+            <h3 class="galery-title">
+              Ресторан <span lang="en">Seafood</span>
+            </h3>
+          </li>
+          <li class="galery-item">
+            <p class="galery-text">Додаток</p>
+          </li>
+
           <li class="galery-item">
             <img
               src="./img/portf-4.jpeg"
@@ -99,8 +117,13 @@
               height="294"
             />
           </li>
-          <h3 class="galery-title">Проєкт <span lang="en">Prime</span></h3>
-          <p class="galery-text">Маркетинг</p>
+          <li class="galery-item">
+            <h3 class="galery-title">Проєкт <span lang="en">Prime</span></h3>
+          </li>
+          <li class="galery-item">
+            <p class="galery-text">Маркетинг</p>
+          </li>
+
           <li class="galery-item">
             <img
               src="./img/portf-5.jpeg"
@@ -109,8 +132,13 @@
               height="294"
             />
           </li>
-          <h3 class="galery-title">Проєкт <span lang="en">Boxes</span></h3>
-          <p class="galery-text">Додаток</p>
+          <li class="galery-item">
+            <h3 class="galery-title">Проєкт <span lang="en">Boxes</span></h3>
+          </li>
+          <li class="galery-item">
+            <p class="galery-text">Додаток</p>
+          </li>
+
           <li class="galery-item">
             <img
               src="./img/portf-6.jpeg"
@@ -119,8 +147,13 @@
               height="294"
             />
           </li>
-          <h3 class="galery-title" lang="en">Inspiration has no Borders</h3>
-          <p class="galery-text">Веб-сайт</p>
+          <li class="galery-item">
+            <h3 class="galery-title" lang="en">Inspiration has no Borders</h3>
+          </li>
+          <li class="galery-item">
+            <p class="galery-text">Веб-сайт</p>
+          </li>
+
           <li class="galery-item">
             <img
               src="./img/portf-7.jpeg"
@@ -129,11 +162,16 @@
               height="294"
             />
           </li>
-          <h3 class="galery-title">
-            Видання <span lang="en">Limited Edition</span>
-          </h3>
-          <p class="galery-text">Дизайн</p>
-          <li>
+          <li class="galery-item">
+            <h3 class="galery-title">
+              Видання <span lang="en">Limited Edition</span>
+            </h3>
+          </li>
+          <li class="galery-item">
+            <p class="galery-text">Дизайн</p>
+          </li>
+
+          <li class="galery-item">
             <img
               src="./img/portf-8.jpeg"
               alt="Ярлик"
@@ -141,8 +179,13 @@
               height="294"
             />
           </li>
-          <h3 class="galery-title">Проєкт <span lang="en">LAB</span></h3>
-          <p class="galery-text">Маркетинг</p>
+          <li class="galery-item">
+            <h3 class="galery-title">Проєкт <span lang="en">LAB</span></h3>
+          </li>
+          <li class="galery-item">
+            <p class="galery-text">Маркетинг</p>
+          </li>
+
           <li class="galery-item">
             <img
               src="./img/portf-9.jpeg"
@@ -151,8 +194,12 @@
               height="294"
             />
           </li>
-          <h3 class="galery-title" lang="en">Growing Business</h3>
-          <p class="galery-text">Додаток</p>
+          <li class="galery-item">
+            <h3 class="galery-title" lang="en">Growing Business</h3>
+          </li>
+          <li class="galery-item">
+            <p class="galery-text">Додаток</p>
+          </li>
         </ul>
       </section>
     </main>
