--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <header class="header">
       <nav>
         <a class="logo-blue link logo" href="./index.html"
-          >Web <span class="logo-black logo">Studio</span>
+          >Web<span class="logo-black logo">Studio</span>
         </a>
         <ul class="header-list list">
           <li class="header-item">
@@ -52,32 +52,32 @@
         </h1>
         <button class="hero-button" type="button">Замовити послугу</button>
       </section>
-      <section class="adv">
+      <section class="advanteges">
         <h2 class="visually-hidden">Переваги</h2>
-        <ul class="adv-list list">
-          <li class="adv-item">
-            <h3 class="adv-title">Увага до деталей</h3>
-            <p class="adv-text">
+        <ul class="advanteges-list list">
+          <li class="advanteges-item">
+            <h3 class="advanteges-title">Увага до деталей</h3>
+            <p class="advanteges-text">
               Ідейні міркування, і навіть початок повсякденної роботи з
               формування позиції.
             </p>
           </li>
-          <li class="adv-item">
-            <h3 class="adv-title">Пунктуальність</h3>
-            <p class="adv-text">
+          <li class="advanteges-item">
+            <h3 class="advanteges-title">Пунктуальність</h3>
+            <p class="advanteges-text">
               Завдання організації, особливо рамки і місце навчання кадрів тягне
               у себе.
             </p>
           </li>
-          <li class="adv-item">
-            <h3 class="adv-title">Планування</h3>
-            <p class="adv-text">
+          <li class="advanteges-item">
+            <h3 class="advanteges-title">Планування</h3>
+            <p class="advanteges-text">
               Так само консультація з широким активом значною мірою зумовлює.
             </p>
           </li>
-          <li class="adv-item">
-            <h3 class="adv-title">Сучасні технології</h3>
-            <p class="adv-text">
+          <li class="advanteges-item">
+            <h3 class="advanteges-title">Сучасні технології</h3>
+            <p class="advanteges-text">
               Значимість цих проблем настільки очевидна, що реалізація планових
               завдань.
             </p>
@@ -85,7 +85,7 @@
         </ul>
       </section>
       <section class="work">
-        <h2 class="work-title">Чим ми займаємося</h2>
+        <h2 class="section-title">Чим ми займаємося</h2>
         <ul class="work-list list">
           <li class="work-item">
             <img
@@ -114,7 +114,7 @@
         </ul>
       </section>
       <section class="command">
-        <h2 class="command-title">Наша команда</h2>
+        <h2 class="section-title">Наша команда</h2>
         <ul class="command-list list">
           <li class="command-item">
             <img
@@ -124,7 +124,7 @@
               height="260"
             />
             <h3 class="command-name">Ігор Дем'яненко</h3>
-            <p class="command-major" lang="en">Product Designer</p>
+            <p class="command-position" lang="en">Product Designer</p>
           </li>
           <li class="command-item">
             <img
@@ -134,7 +134,7 @@
               height="260"
             />
             <h3 class="command-name">Ольга Рєпіна</h3>
-            <p class="command-major" lang="en">Frontend Developer</p>
+            <p class="command-position" lang="en">Frontend Developer</p>
           </li>
           <li>
             <img
@@ -144,7 +144,7 @@
               height="260"
             />
             <h3 class="command-name">Микола Тарасов</h3>
-            <p class="command-major" lang="en">Marketing</p>
+            <p class="command-position" lang="en">Marketing</p>
           </li>
           <li class="command-item">
             <img
@@ -154,15 +154,15 @@
               height="260"
             />
             <h3 class="command-name">Михайло Єрмаков</h3>
-            <p class="command-major" lang="en">UI Designer</p>
+            <p class="command-position" lang="en">UI Designer</p>
           </li>
         </ul>
       </section>
     </main>
     <footer class="footer">
       <a class="logo-blue link logo" href="./index.html"
-          >Web <span class="logo-white logo">Studio</span>
-        </a>
+        >Web<span class="logo-white logo">Studio</span>
+      </a>
       <address>
         <ul class="footer-list list">
           <li class="footer-item">
