--- a/portfolio.html
+++ b/portfolio.html
@@ -17,7 +17,7 @@
     <header class="header">
       <nav>
         <a class="logo-blue link logo" href="./index.html"
-          >Web <span class="logo-black logo">Studio</span>
+          >Web<span class="logo-black logo">Studio</span>
         </a>
         <ul class="header-list list">
           <li class="header-item">
@@ -48,17 +48,20 @@
     </header>
     <main>
       <section>
-        <h2 class="visually-hidden">Портфоліо</h2>
+        <h1 class="visually-hidden">Портфоліо</h1>
+        <ul class="button-list">
+          <li class="button-item list">
+            <button class="btn-all btn" type="button">Усі</button>
 
-        <button class="btn-all btn" type="button">Усі</button>
+            <button class="btn-web btn" type="button">Веб-сайти</button>
 
-        <button class="btn-web btn" type="button">Веб-сайти</button>
+            <button class="btn-add btn" type="button">Додатки</button>
 
-        <button class="btn-add btn" type="button">Додатки</button>
+            <button class="btn-design btn" type="button">Дизайн</button>
 
-        <button class="btn-design btn" type="button">Дизайн</button>
-
-        <button class="btn-marc btn" type="button">Маркетинг</button>
+            <button class="btn-marc btn" type="button">Маркетинг</button>
+          </li>
+        </ul>
 
         <ul class="galery-list list">
           <li class="galery-item">
@@ -68,13 +71,10 @@
               width="370"
               height="294"
             />
-          </li>
-          <li class="galery-item">
             <h3 class="galery-title">Технокряк</h3>
-          </li>
-          <li class="galery-item">
             <p class="galery-text">Веб-сайт</p>
           </li>
+
           <li class="galery-item">
             <img
               src="./img/portf-2.jpeg"
@@ -82,13 +82,9 @@
               width="370"
               height="294"
             />
-          </li>
-          <li class="galery-item">
             <h3 class="galery-title">
               Постер <span lang="en">New Orlean vs Golden Star</span>
             </h3>
-          </li>
-          <li class="galery-item">
             <p class="galery-text">Дизайн</p>
           </li>
 
@@ -99,13 +95,9 @@
               width="370"
               height="294"
             />
-          </li>
-          <li class="galery-item">
             <h3 class="galery-title">
               Ресторан <span lang="en">Seafood</span>
             </h3>
-          </li>
-          <li class="galery-item">
             <p class="galery-text">Додаток</p>
           </li>
 
@@ -116,11 +108,7 @@
               width="370"
               height="294"
             />
-          </li>
-          <li class="galery-item">
             <h3 class="galery-title">Проєкт <span lang="en">Prime</span></h3>
-          </li>
-          <li class="galery-item">
             <p class="galery-text">Маркетинг</p>
           </li>
 
@@ -131,11 +119,7 @@
               width="370"
               height="294"
             />
-          </li>
-          <li class="galery-item">
             <h3 class="galery-title">Проєкт <span lang="en">Boxes</span></h3>
-          </li>
-          <li class="galery-item">
             <p class="galery-text">Додаток</p>
           </li>
 
@@ -146,11 +130,7 @@
               width="370"
               height="294"
             />
-          </li>
-          <li class="galery-item">
             <h3 class="galery-title" lang="en">Inspiration has no Borders</h3>
-          </li>
-          <li class="galery-item">
             <p class="galery-text">Веб-сайт</p>
           </li>
 
@@ -161,13 +141,9 @@
               width="370"
               height="294"
             />
-          </li>
-          <li class="galery-item">
             <h3 class="galery-title">
               Видання <span lang="en">Limited Edition</span>
             </h3>
-          </li>
-          <li class="galery-item">
             <p class="galery-text">Дизайн</p>
           </li>
 
@@ -178,11 +154,7 @@
               width="370"
               height="294"
             />
-          </li>
-          <li class="galery-item">
             <h3 class="galery-title">Проєкт <span lang="en">LAB</span></h3>
-          </li>
-          <li class="galery-item">
             <p class="galery-text">Маркетинг</p>
           </li>
 
@@ -193,11 +165,7 @@
               width="370"
               height="294"
             />
-          </li>
-          <li class="galery-item">
             <h3 class="galery-title" lang="en">Growing Business</h3>
-          </li>
-          <li class="galery-item">
             <p class="galery-text">Додаток</p>
           </li>
         </ul>
@@ -206,7 +174,7 @@
 
     <footer class="footer">
       <a class="logo-blue link logo" href="./index.html"
-        >Web <span class="logo-white logo">Studio</span>
+        >Web<span class="logo-white logo">Studio</span>
       </a>
       <address>
         <ul class="footer-list list">
