--- a/portfolio.html
+++ b/portfolio.html
@@ -52,13 +52,17 @@
         <ul class="button-list">
           <li class="button-item list">
             <button class="btn-all btn" type="button">Усі</button>
-
+          </li>
+          <li class="button-item list">
             <button class="btn-web btn" type="button">Веб-сайти</button>
-
+          </li>
+          <li class="button-item list">
             <button class="btn-add btn" type="button">Додатки</button>
-
+          </li>
+          <li class="button-item list">
             <button class="btn-design btn" type="button">Дизайн</button>
-
+          </li>
+          <li class="button-item list">
             <button class="btn-marc btn" type="button">Маркетинг</button>
           </li>
         </ul>
